--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.3",
@@ -21,6 +22,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "flowbite-react": "^0.11.7",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
