--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.3.0",
     "redux": "^5.0.1",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7"
@@ -47,6 +48,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "sass-embedded": "^1.86.3",
     "vite": "^6.2.0"
   }
 }
